objects/InterestPlanDetails__c.object
<CustomObject>
    <description>Interest Plan Details</description>
    <fields>
        <fullName>APY__c</fullName>
        <description>Annual Percentage Yield</description>
        <label>Annual Percentage Yield</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>Brand Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntBasisDays__c</fullName>
        <description>Interest Basis Days</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Basis Days</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntCalcMeths__c</fullName>
        <description>Interest Calculation Methods</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Calculation Methods</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntPlnCde__c</fullName>
        <description>Interest Plan Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Plan Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntPmtMthd__c</fullName>
        <description>Interest Payment Method</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Payment Method</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestRate__c</fullName>
        <description>Interest Rate</description>
        <label>Interest Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Interest Plan Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Plan Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RteSchedInd__c</fullName>
        <description>Rate Schedule Indicator</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Schedule Indicator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDFreqId__c</fullName>
        <description>Time Deposit Frequency ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Deposit Frequency ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDMatTerm__c</fullName>
        <description>Time Deposit Maturity Term</description>
        <label>Time Deposit Maturity Term</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TDTermId__c</fullName>
        <description>Time Deposit Maturity Term ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Deposit Maturity Term ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TierMaxBal__c</fullName>
        <description>Tier Maximum Balance</description>
        <label>Tier Maximum Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierMinBal__c</fullName>
        <description>Tier Minimum Balance</description>
        <label>Tier Minimum Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>InterestPlanDetails</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>InterestPlanDetails</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterestPlanDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>